--- a/404.html
+++ b/404.html
@@ -1,40 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
-    <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script takes the current url and converts the path and query
-      // string into just a query string, and then redirects the browser
-      // to the new url with only a query string and hash fragment,
-      // e.g. https://www.foo.tld/one/two?a=b&c=d#qwe, becomes
-      // https://www.foo.tld/?/one/two&a=b~and~c=d#qwe
-      // Note: this 404.html file must be at least 512 bytes for it to work
-      // with Internet Explorer (it is currently > 512 bytes)
+<head>
+	<meta http-equiv=X-UA-Compatible content="IE=edge">
+	<meta name=viewport content="width=device-width,initial-scale=1">
+	<link rel=icon type=image/png href=/favicon-32x32.png>
+	<meta name=viewport content="width=device-width,initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel=stylesheet>
+	
+	<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script><script async src="https://www.googletagmanager.com/gtag/js?id=UA-126826852-1"></script>
+	
+	<script>window.dataLayer = window.dataLayer || [];
+	    function gtag(){dataLayer.push(arguments);}
+	    gtag('js', new Date());
 
-      // If you're creating a Project Pages site and NOT using a custom domain,
-      // then set pathSegmentsToKeep to 1 (enterprise users may need to set it to > 1).
-      // This way the code will only replace the route part of the path, and not
-      // the real directory in which the app resides, for example:
-      // https://username.github.io/repo-name/one/two?a=b&c=d#qwe becomes
-      // https://username.github.io/repo-name/?/one/two&a=b~and~c=d#qwe
-      // Otherwise, leave pathSegmentsToKeep as 0.
-      var pathSegmentsToKeep = 0;
-
-      var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
-
-    </script>
-  </head>
-  <body>
-  </body>
-</html>
+	    gtag('config', 'UA-126826852-1');
+	</script>
+	
+	<script id=mcjs>!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/0cd4c231af47d2b7d40a5eac6/53e1013808d32c1ae46a9c6ac.js");</script><link href=/css/app.bc1b55fd.css rel=preload as=style><link href=/css/chunk-vendors.6953dba0.css rel=preload as=style><link href=/js/app.d3563e04.js rel=preload as=script><link href=/js/chunk-vendors.fe63ccf3.js rel=preload as=script><link href=/css/chunk-vendors.6953dba0.css rel=stylesheet><link href=/css/app.bc1b55fd.css rel=stylesheet></head><body><noscript><strong>We're sorry but scatterweb doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=scatter></div><script src=/js/chunk-vendors.fe63ccf3.js></script><script src=/js/app.d3563e04.js></script></body></html>
